--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 host=localhost
-database.name=data_base_hw3
+database.name=project_management
 username=postgres
 password=Qweasdzxc123@
 jdbc.driver=org.postgresql.Driver
