--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'
     implementation group: 'jstl', name: 'jstl', version: '1.2'
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.21.Final'
 
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
