--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'war'
 }
 
+apply plugin: 'java'
+
 group 'org.example'
 version '1.0-SNAPSHOT'
 
@@ -18,6 +20,7 @@ dependencies {
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'
     implementation group: 'jstl', name: 'jstl', version: '1.2'
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.21.Final'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
