--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'
     implementation group: 'jstl', name: 'jstl', version: '1.2'
-    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.21.Final'
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.5.3.Final'
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
     compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
